--- a/convex-app/package.json
+++ b/convex-app/package.json
@@ -6,7 +6,7 @@
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
     "dev:frontend": "next dev --turbopack",
     "dev:backend": "convex dev",
-    "predev": "convex dev --until-success && node setup.mjs --once && convex dashboard",
+    "predev": "convex dev --until-success && node setup.mjs --once",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
