Use PostgreSQL with custom convex-backend without SSL
- https://github.com/t-aida-yamato/convex-backend/tree/dev

--- a/convex-backend/.env
+++ b/convex-backend/.env
@@ -1,1 +1,7 @@
 DISABLE_BEACON=true
+
+DATABASE_URL=postgresql://postgres:postgres@postgres
+
+POSTGRES_DB=convex_self_hosted
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
